Added Music Button

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body, html {
   text-align: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+* {
+  box-sizing: inherit;
 }
