--- a/src/components/MusicButton/MusicButton.css
+++ b/src/components/MusicButton/MusicButton.css
@@ -1,7 +1,7 @@
 .music-button {
   position: fixed;
   bottom: 20px;
-  left: 20px;
+  Right: 20px;
   width: 60px;
   height: 60px;
   background-color: #3b3b3b;
