--- a/src/components/SkyScroll/SkyScroll.css
+++ b/src/components/SkyScroll/SkyScroll.css
@@ -1,3 +1,43 @@
-html, body {
+.sky-scroll {
+  width: 100%;
+  height: 900px;
+  background: rgb(20, 30, 60);
   transition: background 0.3s linear;
+  position: relative;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.sky-scroll::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  background: radial-gradient(
+    circle at 50% 20%,
+    rgba(255, 255, 255, 0.1),
+    transparent 60%
+  );
+  transition: opacity 0.3s linear;
+  opacity: 0.6;
+}
+
+.sky-scroll-content {
+  position: relative;
+  z-index: 1;
+}
+
+.profile-img {
+
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  object-fit: cover;
 }
