--- a/src/components/SkyScroll/SkyScroll.css
+++ b/src/components/SkyScroll/SkyScroll.css
@@ -1,6 +1,6 @@
 .sky-scroll {
   width: 100%;
-  height: 900px;
+  height: 100vh;
   background: rgb(20, 30, 60);
   transition: background 0.3s linear;
   position: relative;
@@ -12,6 +12,21 @@
   color: white;
   font-family: sans-serif;
   text-align: center;
+}
+
+.sky-layer {
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+
+.sky-layer img {
+  width: 100%;
+  display: block;
+}
+.sky-scroll-content {
+  position: relative;
+  z-index: 3;
 }
 
 .sky-scroll::after {
@@ -41,3 +56,24 @@
   margin-bottom: 10px;
   object-fit: cover;
 }
+.cloud {
+  top: 5%;
+  z-index: 2;
+}
+
+.mountain {
+  bottom: 10%;
+  z-index: 1;
+}
+
+.ground {
+  bottom: 0%;
+  z-index: 0;
+}
+
+.sky-layer img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
