--- a/src/components/Tribes/Tribes.css
+++ b/src/components/Tribes/Tribes.css
@@ -48,14 +48,28 @@
   width: 40%;
 }
 
-.wishlist button {
-  padding: 10px 20px;
+.wishlist-button {
+  display: inline-block;
+  background-color: #411d05;
+  color: white;
+  padding: 12px 24px;
+  border-radius: 8px;
   font-size: 18px;
-  cursor: pointer;
-  margin-bottom: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
+.wishlist-button:hover {
+  color: blue;
+  background-color: #4eb940;
+  text-decoration: none;
+  transform: scale(1.05);
+}
+
+
 .video-container {
+  margin-top: 15px;
   margin-bottom: 30px;
 }
 
