--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 :root {
-  --bg: #0b0c0f00;
+  --bg: #0b0c0f81;
   --text: #333333;
   --accent: #8eac89;
   --accent-dark: #6f8a6c;
@@ -23,17 +23,9 @@
   align-items: center;
 }
 
-.profile-pic {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 15px;
-}
-
 h1 {
   font-family: "Press Start 2P", cursive;
   font-size: 18px;
-  margin: 0;
 }
 
 .nav-links a {
@@ -43,7 +35,16 @@ h1 {
   font-weight: bold;
   color: var(--text);
 }
-
+.nav-links {
+  margin-right: 160px;
+}
+.nav-links a {
+  margin: 0 10px;
+  text-decoration: none;
+  font-family: "Roboto Mono", monospace;
+  font-weight: bold;
+  color: var(--text);
+}
 .nav-links a:hover {
   color: var(--accent);
 }
