--- a/src/components/Tribes/Tribes.css
+++ b/src/components/Tribes/Tribes.css
@@ -98,6 +98,20 @@
 .video-container {
   margin-top: 30px;
   margin-bottom: 40px;
+  width: 100%;
+  max-width: 800px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.video-container video,
+.video-container iframe {
+  width: 100%;
+  height: 450px;
+  border-radius: 16px;
+  display: block;
 }
 
 .social-icons {
