--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,12 +6,19 @@
   border-top: 1px solid #1e293b;
 }
 .footer .socials a {
-  margin: 0 8px;
+  margin: 0 3px;
   color: #cbd5e1;
   font-size: 1.3rem;
 }
+.footer .socials {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: #cbd5e1;
+}
+
 .footer .socials a:hover {
-  color: #818cf8;
+  color: #f88181;
 }
 .footer p {
   margin-top: 10px;
