--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,7 +6,7 @@
   margin: 50px auto;
   padding: 40px;
   font-family: "Inter", sans-serif;
-  background-color: #424242;
+  background-color: #424242b0;
   border-radius: 16px;
   .profile-card:last-child {
     grid-column: 1 / span 2;
