--- a/src/components/SkyScroll/SkyScroll.css
+++ b/src/components/SkyScroll/SkyScroll.css
@@ -1,43 +1,51 @@
-/* Sky container */
 .sky-scroll {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background: rgb(20, 30, 60); /* night sky default */
+  background: rgb(20, 30, 60);
   position: relative;
   overflow: hidden;
   transition: background 0.3s linear;
 }
 
-/* Common layer styling */
 .layer {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
   left: 0;
-  background-repeat: repeat-x;
-  background-position: top left;
-  background-size: auto; /* keeps original image size */
+  top: 0;
+  width: auto;
+  height: auto;
+  transform-origin: top left;
+  pointer-events: none;
 }
 
-/* Cloud layer */
+.layer img {
+  transform: scale(var(--img-scale, 1));
+  transform-origin: center;
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: none; 
+}
+
 .cloud {
+  --img-scale: 0.4;
+  position: absolute;
+  top: -80px;
+  left: 600px;
   z-index: 3;
-  background-image: url('../../assets/images/Background/Cloud.png');
-  top: 5%;
-  pointer-events: none; /* prevents accidental clicks on clouds */
 }
 
-/* Mountain layer */
 .mountain {
-  z-index: 1;
-  background-image: url('../../assets/images/Background/Mountain.png');
-  bottom: -30%;
+  --img-scale: 2;
+  position: absolute;
+  top: 200px;
+  left: 645px;
+  z-index: 0;
 }
 
-/* Ground layer */
 .ground {
-  z-index: 2;
-  background-image: url('../../assets/images/Background/Grass.png');
-  bottom: -150%;
+  --img-scale: 9;
+  position: absolute;
+  top: 120px;
+  left: 1100px;
+  z-index: 1;
 }
