--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body, html {
   text-align: center;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
