--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,11 @@
 :root {
-  --bg: #0b0c0f81;
-  --text: #333333;
+  --bg: #003bec;
+  --text: #ffffff;
+  --text2: rgb(0, 0, 0);
   --accent: #8eac89;
   --accent-dark: #6f8a6c;
-    --bg1: #ffffff54;
+  --bg1: #95b7cb00;
+  --bg2: #95b7cbb6;
   --link-hover: var(--accent);
 }
 .header {
@@ -12,10 +14,16 @@
   align-items: center;
   padding: 15px 30px;
   background-color: var(--bg1);
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
+}
+.header-active {
+  background-color: var(--bg2);
+  --text: #000000;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .header-left {
@@ -24,6 +32,7 @@
 }
 
 h1 {
+  color: var(--text);
   font-family: "Press Start 2P", cursive;
   font-size: 18px;
 }
