--- a/src/components/MusicButton/MusicButton.css
+++ b/src/components/MusicButton/MusicButton.css
@@ -1,16 +1,16 @@
 .music-button {
   position: fixed;
   bottom: 20px;
-  Right: 20px;
+  right: 20px;
   width: 60px;
   height: 60px;
-  background-color: #3b3b3b;
+  background-color: var(--music-button);
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
   font-size: 24px;
   user-select: none;
   transition: transform 0.2s;
