--- a/src/components/Tribes/Tribes.css
+++ b/src/components/Tribes/Tribes.css
@@ -91,7 +91,7 @@
 
 .wishlist-button {
   display: inline-block;
-  background-color: var(--accent-cta);
+  background-color: var(--wishlist-deact);
   color: var(--text);
   padding: 14px 28px;
   border-radius: 8px;
@@ -103,7 +103,7 @@
 
 .wishlist-button:hover {
   color: var(--text);
-  background-color: var(--accent-2);
+  background-color: var(--wishlist-act);
   text-decoration: none;
   transform: scale(1.05);
 }
