--- a/src/components/SkyScroll/SkyScroll.css
+++ b/src/components/SkyScroll/SkyScroll.css
@@ -6,7 +6,6 @@
   position: relative;
   overflow: hidden;
   transition: background 0.3s linear;
-  /* subtle outer shadow so the segment lifts off the page */
   box-shadow: 0 18px 40px rgba(0, 0, 0, 0.18);
 }
 
@@ -40,7 +39,9 @@
 }
 
 .mountain {
-  filter: brightness(1);
+  --mountain-brightness: 1;
+  filter: brightness(var(--mountain-brightness));
+  transition: filter 200ms linear;
   --img-scale: 1.05;
   position: absolute;
   top: -90px;
@@ -49,6 +50,9 @@
 }
 
 .ground {
+  --ground-brightness: 1;
+  filter: brightness(var(--ground-brightness));
+  transition: filter 200ms linear;
   --img-scale: 1.05;
   position: absolute;
   top: 120px;
