--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,22 +1,18 @@
-.desktop-container {
-  /* desktop-only scope */
-
-  .profiles-container {
-    width: 100%;
-    max-width: 2250px;
-    height: auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    margin: 50px auto;
-    padding: 40px;
-    background-color: var(--surface-4);
-    position: relative;
-    .profile-card:last-child {
-      grid-column: 1 / span 2;
-      justify-self: center;
-      max-width: 8000px;
-    }
+.profiles-container {
+  width: 100%;
+  max-width: 2250px;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 50px auto;
+  padding: 40px;
+  background-color: var(--surface-4);
+  position: relative;
+  .profile-card:last-child {
+    grid-column: 1 / span 2;
+    justify-self: center;
+    max-width: 8000px;
   }
 }
 .profiles-container::before {
@@ -47,14 +43,14 @@ h1 {
   height: auto;
 }
 .team-logo {
+  transform: translateY(20px);
   grid-column: 1 / -1;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: -110px;
-  margin-top: -60px;
 }
 .team-header {
+  margin-top: 50px;
   grid-column: 1 / -1;
   text-align: center;
   margin-bottom: 30px;
