--- a/src/components/Header/HeaderMobile.css
+++ b/src/components/Header/HeaderMobile.css
@@ -25,8 +25,15 @@
     font-size: 18px;
     margin: 0;
   }
+  .header-left h1 {
+    color: var(--text);
+    font-size: 18px;
+    margin: 0;
+    margin-left: 90px;
+  }
 
-  .hamburger {
+  .Hamburger{
+    visibility: visible;
     width: 44px;
     height: 44px;
     display: flex;
@@ -35,15 +42,21 @@
     border-radius: 10px;
     background: var(--surface-4);
     border: 1px solid var(--border);
+    margin-left: 20px;
+    margin-top: 5px;
   }
 
   .nav-links {
+    color: var(--debug);
     display: none;
   }
-
+  .social-links{
+    padding-top: 5px;
+  }
   .social-links a {
     color: var(--text);
     font-size: 20px;
     margin-left: 8px;
+    padding-top: 100px;
   }
 }
